// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RouteMap > printHelp > aliased nested route map with aliases > no ANSI color 1`] = `
"USAGE
  cli alias1 doNothing
  cli alias1 sub doNothing1|doNothing2 ...
  cli alias1 --help
  cli alias1 --version

route map brief

ALIASES
  cli route
  cli alias2

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > aliased nested route map with aliases > with ANSI color 1`] = `
"[4mUSAGE[24m
  cli alias1 doNothing
  cli alias1 sub doNothing1|doNothing2 ...
  cli alias1 --help
  cli alias1 --version

route map brief

[4mALIASES[24m
  cli route
  cli alias2

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [1msub[32m        [003msub route map brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route map > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help

route map brief

FLAGS
  -h --help  Print help information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map > with ANSI color 1`] = `
"[4mUSAGE[24m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help

route map brief

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m  [003mPrint help information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [1msub[32m        [003msub route map brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route map force include hidden routes > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

route map brief

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map force include hidden routes > with ANSI color 1`] = `
"[4mUSAGE[24m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

route map brief

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [2msub[22m        [2;3msub route map brief[22;23m
"
`;

exports[`RouteMap > printHelp > nested route map with \`convert-camel-to-kebab\` display case style > no ANSI color 1`] = `
"USAGE
  prefix do-nothing
  prefix sub do-nothing1|do-nothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  do-nothing  top command brief
  sub         sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with \`convert-camel-to-kebab\` display case style > with ANSI color 1`] = `
"[4mUSAGE[24m
  prefix do-nothing
  prefix sub do-nothing1|do-nothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdo-nothing[32m  [003mtop command brief[00023m
  [1msub[32m         [003msub route map brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route map with aliases > no ANSI color 1`] = `
"USAGE
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

ALIASES
  cli alias1
  cli alias2

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with aliases > with ANSI color 1`] = `
"[4mUSAGE[24m
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

[4mALIASES[24m
  cli alias1
  cli alias2

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [1msub[32m        [003msub route map brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route map with hidden routes > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix --help
  prefix --version

route map brief

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
"
`;

exports[`RouteMap > printHelp > nested route map with hidden routes > with ANSI color 1`] = `
"[4mUSAGE[24m
  prefix doNothing
  prefix --help
  prefix --version

route map brief

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route map with version available > no ANSI color 1`] = `
"USAGE
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

FLAGS
  -h --help     Print help information and exit
  -v --version  Print version information and exit

COMMANDS
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route map with version available > with ANSI color 1`] = `
"[4mUSAGE[24m
  prefix doNothing
  prefix sub doNothing1|doNothing2 ...
  prefix --help
  prefix --version

Longer description of this route map's behavior, only printed during --help

[4mFLAGS[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCOMMANDS[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [1msub[32m        [003msub route map brief[00023m
"
`;

exports[`RouteMap > printHelp > nested route maps with custom header text > no ANSI color 1`] = `
"Usage:
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

Aliases:
  cli alias1
  cli alias2

Flags:
  -h --help     Print help information and exit
  -v --version  Print version information and exit

Commands:
  doNothing  top command brief
  sub        sub route map brief
"
`;

exports[`RouteMap > printHelp > nested route maps with custom header text > with ANSI color 1`] = `
"[4mUsage:[24m
  cli route doNothing
  cli route sub doNothing1|doNothing2 ...
  cli route --help
  cli route --version

route map brief

[4mAliases:[24m
  cli alias1
  cli alias2

[4mFlags:[24m
  [1m-h[22m [1m--help[22m     [003mPrint help information and exit[00023m
  [1m-v[22m [1m--version[22m  [003mPrint version information and exit[00023m

[4mCommands:[24m
  [1mdoNothing[32m  [003mtop command brief[00023m
  [1msub[32m        [003msub route map brief[00023m
"
`;
